--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsMisterCocktail</title>
+    <title>Les visiteurs</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="banner-index" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn-media.rtl.fr/cache/vdA4JQl54C8_0l1SJ00nwA/2000v1333-0/online/image/2020/0507/7800489939_les-visiteurs-2-les-couloirs-du-temps-est-sorti-en-1998.png);">
+      <div class="container">
+        <h1><span id="banner-typed-text"></span></h1>
+        <p>Vous savez ce qu'il vous reste à faire.</p>
+        <%= link_to "Offrez lui un brevage", new_cocktail_path, class: "btn btn-primary m-2"%>
+      </div>
+  </div>
+      <h1>
+        <span id="banner-typed-text"></span>
+      </h1>
+      <%= yield %>
+      <div class="footer-cocktail">
+        <div class="footer-links">
+          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="footer-copyright">
+          J'adore le développement <i class="fas fa-heart"></i>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
+
+
+
