--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -49,3 +49,10 @@
   background-position: center;
   padding: 120px 0;
 }
+
+.img-show {
+  background-size: cover;
+  background-position: center;
+  padding: 100px 0;
+  margin-top: -30px;
+}
