--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -4,10 +4,11 @@
     <div class="col-xs-12 col-md-6 col-md-offset-3">
         <%= simple_form_for @cocktail do |f| %>
           <%= f.input :name %>
+          <%= f.input :photo %>
           <%= f.submit "Envoyer", class: "btn btn-primary" %>
         <% end %>
         <div class="mt-1">
-          <%= link_to "Retour", cocktails_path, class: "btn btn-danger btn-sm" %>
+          <%= link_to "Retour", cocktails_path, class: "btn btn-secondary" %>
         </div>
     </div>
   </div>
