--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
   <body>
       <%= yield %>
+      <div class="container">
       <div class="footer-cocktail">
         <div class="footer-links">
           <a href="#"><i class="fab fa-github"></i></a>
@@ -24,6 +25,7 @@
         <div class="footer-copyright">
           J'adore le développement <i class="fas fa-heart"></i>
         </div>
+      </div>
       </div>
     </div>
   </body>
